--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-	"name": "svelte-simple-forms",
+	"name": "@svelio/svelte-simple-forms",
 	"version": "0.0.1",
+	"license": "MIT",
+	"private": false,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/svelio/svelte-simple-forms"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
@@ -14,6 +20,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
+		"@types/lodash": "^4.14.186",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"eslint": "^8.16.0",
@@ -21,6 +28,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fast-deep-equal": "^3.1.3",
 		"klona": "^2.0.5",
+		"lodash": "^4.17.21",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
