--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fast-deep-equal": "^3.1.3",
 		"klona": "^2.0.5",
-		"lodash": "^4.17.21",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
@@ -37,6 +36,9 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
+	},
+	"dependencies": {
+		"lodash": "^4.17.21"
 	},
 	"type": "module"
 }
