--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -2,6 +2,7 @@ plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
   - '@semantic-release/npm'
+      pkgRoot: 'package'
   - '@semantic-release/github':
       assets:
         - path: 'package'
