--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,7 +1,7 @@
 plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
-  - '@semantic-release/npm'
+  - '@semantic-release/npm':
       pkgRoot: 'package'
   - '@semantic-release/github':
       assets:
