--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.2.0",
 		"@commitlint/config-conventional": "^17.2.0",
+		"@semantic-release/changelog": "^6.0.1",
+		"@semantic-release/git": "^10.0.1",
 		"@semantic-release/github": "^8.0.6",
+		"@semantic-release/npm": "^9.0.1",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
@@ -53,5 +56,8 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
