--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,7 +2,7 @@
 	"plugins": [
 		"@semantic-release/commit-analyzer",
 		"@semantic-release/release-notes-generator",
-		["@semantic-release/npm", { "pkgRoot": "package" }],
-		["@semantic-release/github", { "assets": [{ "path": "package", "label": "Package" }] }]
+		"@semantic-release/github",
+		["@semantic-release/npm", { "pkgRoot": "package" }]
 	]
 }
